# similarity-search

./: .gitignore  .travis.yml  CMakeLists.txt  ITQ.md  LICENSE  MIPS.md  MultiPQ.md  README.md  e2lsh.sh  search.sh  srp.sh
data/audio/: 20_audio_angular_groundtruth.lshbox  audio_euclid_groundtruth.lshbox
data/netflix/: netflix_product_groundtruth.lshbox
script/: ex_mips.sh
script/apps/: cross_polytope.sh  e2lsh.sh  graph.sh  itq.sh  kmeans.sh  knn_graph.sh  pq.sh  srp.sh
script/mips/: alsh.sh  cross_polytope_simple_lsh.sh  float_lsh.sh  norm_range.sh  rational_alsh.sh  rational_cross_polytope.sh  rational_nr.sh  rational_sign.sh  sign_alsh.sh  simple_e2lsh.sh  simple_lsh.sh
script/plot/: plot.py
script/plot/data/imagenet/top1/code16/: alsh.sh  cross_polytope_simple_lsh.sh  norm_range.sh  rational_alsh_shift_4.sh  rational_nr_shift_4.sh  rational_sign_shift_4.sh  sign_alsh.sh  simpleLSH.sh
script/plot/data/imagenet/top1/code32/: alsh.sh  cross_polytope_simple_lsh.sh  norm_range.sh  rational_alsh_shift_4.sh  rational_cross_polytope.sh  rational_nr_shift_4.sh  rational_sign_shift_4.sh  sign_alsh.sh  simpleLSH.sh
script/plot/data/imagenet/top1/code64/: alsh.sh  cross_polytope_simple_lsh.sh  norm_range.sh  rational_alsh_shift_4.sh  rational_nr_shift_4.sh  rational_sign_shift_4.sh  sign_alsh.sh  simpleLSH.sh
script/plot/data/imagenet/top10/code16/: alsh.sh  cross_polytope_simple_lsh.sh  norm_range.sh  rational_alsh_shift_4.sh  rational_nr_shift_4.sh  rational_sign_shift_4.sh  sign_alsh.sh  simpleLSH.sh
script/plot/data/imagenet/top10/code32/: alsh.sh  cross_polytope_simple_lsh.sh  norm_range.sh  rational_alsh_shift_4.sh  rational_cross_polytope.sh  rational_nr_shift_4.sh  rational_sign_shift_4.sh  sign_alsh.sh  simpleLSH.sh
script/plot/data/imagenet/top10/code64/: alsh.sh  cross_polytope_simple_lsh.sh  norm_range.sh  rational_alsh_shift_4.sh  rational_nr_shift_4.sh  rational_sign_shift_4.sh  sign_alsh.sh  simpleLSH.sh
script/plot/data/imagenet/top20/code32/: cross_polytope_simple_lsh.sh  rational_alsh_shift_4.sh
script/plot/data/imagenet/top20/code64/: alsh.sh  cross_polytope_simple_lsh.sh  rational_alsh_shift_4.sh
script/plot/data/imagenet/top50/code16/: alsh.sh  cross_polytope_simple_lsh.sh  norm_range.sh  rational_alsh_shift_4.sh  rational_nr_shift_4.sh  rational_sign_shift_4.sh  sign_alsh.sh  simpleLSH.sh
script/plot/data/imagenet/top50/code32/: alsh.sh  cross_polytope_simple_lsh.sh  norm_range.sh  rational_alsh_shift_4.sh  rational_cross_polytope.sh  rational_nr_shift_4.sh  rational_sign_shift_4.sh  sign_alsh.sh  simpleLSH.sh
script/plot/data/imagenet/top50/code64/: alsh.sh  cross_polytope_simple_lsh.sh  norm_range.sh  sign_alsh.sh  (+4 more)
script/plot/data/top/code/: sign_alsh.sh
script/tool/: cal_groundtruth.sh
src/: CMakeLists.txt  ITQ.md  cal_groundtruth.sh  e2lsh.cpp  e2lsh.sh  executor.hpp  graph.cpp  graph.sh  ground_truth.cpp  itq.cpp  itq.sh  kmeans.cpp  kmeans.sh  knn_graph.sh  norm_range.cpp  norm_range.sh  normrange.cpp  normrange.sh  pq.cpp  pq.sh  search.cpp  search.sh  simple_lsh.cpp  simple_lsh.sh  srp.cpp  srp.sh
src/apps/: cross_polytope.cpp  e2lsh.cpp  forest.cpp  graph.cpp  itq.cpp  joint_inverted.cpp  kmeans.cpp  multi_pq.cpp  multi_pq_avgdist.cpp  multi_pq_counter.cpp  multi_pq_ranker.cpp  pq.cpp  rpt.cpp  srp.cpp
src/include/: bitindex.hpp  executor.hpp  index.hpp  matrix.h  matrix.hpp  metric.h  metric.hpp  parameters.hpp  query.hpp  search.hpp
src/include/bench/: bencher.h  bencher.hpp  benchrecord.h  benchrecord.hpp
src/include/common/: basis.h  bitindex.hpp  calculator.hpp  index.hpp  query.hpp
src/include/common/index/: srp.hpp
src/include/common/query/: hrquery.hpp
src/include/index/: bit_index.hpp  bitindex.hpp  cross_polytype.hpp  e2lsh.hpp  forest.hpp  graph.hpp  int_index.hpp  intindex.hpp  itq.hpp  joint_inverted.hpp  kmeans.hpp  map_index.hpp  mapindex.hpp  multi_pq.hpp  norm_range.hpp  normrange.hpp  pq.hpp  rptree.hpp  simple_lsh.hpp  srp.hpp
src/include/index/transformer/: alsh_transformer.hpp  float_transformer.hpp  norm_range.hpp  sign_transformer.hpp  simple_transformer.hpp  transformer.hpp  transformer_lsh.hpp
src/include/lshbox/: eval.h  matrix.h  topk.h
src/include/lshbox/matrix/: hugematrix.h  matrix.h
src/include/matrix/: hugematrix.h  matrix.h
src/include/query/: bucketsorter.hpp  cluster_ranker.hpp  cross_polytope.hpp  forest_query.hpp  graph_search.hpp  hamming_ranker.hpp  hrquery.hpp  imi_prober.hpp  int_ranker.hpp  irquery.hpp  multi_pq.hpp  multi_pq_avgdist.hpp  multi_pq_counter.hpp  multi_pq_ranker.hpp  norm_range.hpp  normrangequery.hpp  pq_ranker.hpp  radixsorter.hpp  rational_nr.hpp
src/include/query/norm_range/: norm_range.hpp  rational_alsh.hpp  rational_cross_polytope.hpp  rational_nr.hpp  sub_data_sorter.hpp
src/include/query/sorter/: bucket_sorter.hpp  imi_sorter.hpp  linear_sorter.hpp  radix_sorter.hpp
src/include/utils/: calculator.hpp  ground_truth.h  ground_truth.hpp  hashers.hpp  heap.hpp  topk.h  topk.hpp  util.hpp
src/mips/: alsh.cpp  cross_polytope_simple_lsh.cpp  float_lsh.cpp  norm_range.cpp  rational_alsh.cpp  rational_cross_polytope.cpp  rational_nr.cpp  rational_sign.cpp  sign_alsh.cpp  simple_e2lsh.cpp  simple_lsh.cpp
src/tool/: ground_truth.cpp
(+214 files in other folders)
